[package]
name = "wshowkeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
udev = "0.6.3"
errno = "*"
input = "0.7.1"
xkbcommon = { version = "0.4.0", features = ["wayland"] }
wayland-client = "0.30.0-beta.8"
wayland-protocols = { version = "0.30.0-beta.8", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0-beta.8", features = ["client"] }